// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toSVG > should autoCrop 1`] = `
"<svg id="myId" xmlns="http://www.w3.org/2000/svg" version="1.1" width="135px" height="41px" viewBox="74 55 135 41">
  <style> #myId text {font-family: sans-serif;} #myId { pointer-events:none; } #myId .event  { pointer-events:all; } #myId line { stroke-linecap:round; } #myId polygon { stroke-linejoin:round; } </style>
  <text x="154.95" y="73.67" stroke="none" font-size="14" fill="rgb(255,13,13)">O</text>
  <text x="92.59" y="85.67" stroke="none" font-size="14" fill="rgb(255,13,13)">O</text>
  <text x="82.48" y="85.67" stroke="none" font-size="14" fill="rgb(255,13,13)">H</text>
  <line x1="201.96" y1="69" x2="181.18" y2="81" stroke="rgb(0,0,0)" stroke-width="1.44" />
  <line x1="181.18" y1="81" x2="166.84" y2="72.72" stroke="rgb(0,0,0)" stroke-width="1.44" />
  <line x1="153.95" y1="72.72" x2="139.61" y2="81" stroke="rgb(0,0,0)" stroke-width="1.44" />
  <line x1="139.61" y1="81" x2="118.82" y2="69" stroke="rgb(0,0,0)" stroke-width="1.44" />
  <line x1="118.82" y1="69" x2="104.48" y2="77.28" stroke="rgb(0,0,0)" stroke-width="1.44" />
  <line id="myId:Bond:0" class="event" x1="201.96" y1="69" x2="181.18" y2="81" stroke-width="8" opacity="0" />
  <line id="myId:Bond:1" class="event" x1="181.18" y1="81" x2="160.39" y2="69" stroke-width="8" opacity="0" />
  <line id="myId:Bond:2" class="event" x1="160.39" y1="69" x2="139.61" y2="81" stroke-width="8" opacity="0" />
  <line id="myId:Bond:3" class="event" x1="139.61" y1="81" x2="118.82" y2="69" stroke-width="8" opacity="0" />
  <line id="myId:Bond:4" class="event" x1="118.82" y1="69" x2="98.04" y2="81" stroke-width="8" opacity="0" />
  <circle id="myId:Atom:0" class="event" cx="201.96" cy="69" r="8" opacity="0" />
  <circle id="myId:Atom:1" class="event" cx="181.18" cy="81" r="8" opacity="0" />
  <circle id="myId:Atom:2" class="event" cx="160.39" cy="69" r="8" opacity="0" />
  <circle id="myId:Atom:3" class="event" cx="139.61" cy="81" r="8" opacity="0" />
  <circle id="myId:Atom:4" class="event" cx="118.82" cy="69" r="8" opacity="0" />
  <circle id="myId:Atom:5" class="event" cx="98.04" cy="81" r="8" opacity="0" />
</svg>"
`;

exports[`toSVG > should autoCrop 2`] = `
"<svg id="myId" xmlns="http://www.w3.org/2000/svg" version="1.1" width="175px" height="81px" viewBox="54 35 175 81">
  <style> #myId text {font-family: sans-serif;} #myId { pointer-events:none; } #myId .event  { pointer-events:all; } #myId line { stroke-linecap:round; } #myId polygon { stroke-linejoin:round; } </style>
  <text x="154.95" y="73.67" stroke="none" font-size="14" fill="rgb(255,13,13)">O</text>
  <text x="92.59" y="85.67" stroke="none" font-size="14" fill="rgb(255,13,13)">O</text>
  <text x="82.48" y="85.67" stroke="none" font-size="14" fill="rgb(255,13,13)">H</text>
  <line x1="201.96" y1="69" x2="181.18" y2="81" stroke="rgb(0,0,0)" stroke-width="1.44" />
  <line x1="181.18" y1="81" x2="166.84" y2="72.72" stroke="rgb(0,0,0)" stroke-width="1.44" />
  <line x1="153.95" y1="72.72" x2="139.61" y2="81" stroke="rgb(0,0,0)" stroke-width="1.44" />
  <line x1="139.61" y1="81" x2="118.82" y2="69" stroke="rgb(0,0,0)" stroke-width="1.44" />
  <line x1="118.82" y1="69" x2="104.48" y2="77.28" stroke="rgb(0,0,0)" stroke-width="1.44" />
  <line id="myId:Bond:0" class="event" x1="201.96" y1="69" x2="181.18" y2="81" stroke-width="8" opacity="0" />
  <line id="myId:Bond:1" class="event" x1="181.18" y1="81" x2="160.39" y2="69" stroke-width="8" opacity="0" />
  <line id="myId:Bond:2" class="event" x1="160.39" y1="69" x2="139.61" y2="81" stroke-width="8" opacity="0" />
  <line id="myId:Bond:3" class="event" x1="139.61" y1="81" x2="118.82" y2="69" stroke-width="8" opacity="0" />
  <line id="myId:Bond:4" class="event" x1="118.82" y1="69" x2="98.04" y2="81" stroke-width="8" opacity="0" />
  <circle id="myId:Atom:0" class="event" cx="201.96" cy="69" r="8" opacity="0" />
  <circle id="myId:Atom:1" class="event" cx="181.18" cy="81" r="8" opacity="0" />
  <circle id="myId:Atom:2" class="event" cx="160.39" cy="69" r="8" opacity="0" />
  <circle id="myId:Atom:3" class="event" cx="139.61" cy="81" r="8" opacity="0" />
  <circle id="myId:Atom:4" class="event" cx="118.82" cy="69" r="8" opacity="0" />
  <circle id="myId:Atom:5" class="event" cx="98.04" cy="81" r="8" opacity="0" />
</svg>"
`;

exports[`toSVG > should not throw with zero size 1`] = `
"<svg id="mol6" xmlns="http://www.w3.org/2000/svg" version="1.1" width="0px" height="0px" viewBox="0 0 0 0">
  <style> #mol6 text {font-family: sans-serif;} #mol6 { pointer-events:none; } #mol6 .event  { pointer-events:all; } #mol6 line { stroke-linecap:round; } #mol6 polygon { stroke-linejoin:round; } </style>
  <text x="0" y="0" stroke="none" font-size="0" fill="rgb(255,13,13)">O</text>
  <text x="0" y="0" stroke="none" font-size="0" fill="rgb(255,13,13)">O</text>
  <text x="0" y="0" stroke="none" font-size="0" fill="rgb(255,13,13)">H</text>
  <line id="mol6:Bond:0" class="event" x1="0" y1="0" x2="0" y2="0" stroke-width="8" opacity="0" />
  <line id="mol6:Bond:1" class="event" x1="0" y1="0" x2="0" y2="0" stroke-width="8" opacity="0" />
  <line id="mol6:Bond:2" class="event" x1="0" y1="0" x2="0" y2="0" stroke-width="8" opacity="0" />
  <line id="mol6:Bond:3" class="event" x1="0" y1="0" x2="0" y2="0" stroke-width="8" opacity="0" />
  <line id="mol6:Bond:4" class="event" x1="0" y1="0" x2="0" y2="0" stroke-width="8" opacity="0" />
  <circle id="mol6:Atom:0" class="event" cx="0" cy="0" r="8" opacity="0" />
  <circle id="mol6:Atom:1" class="event" cx="0" cy="0" r="8" opacity="0" />
  <circle id="mol6:Atom:2" class="event" cx="0" cy="0" r="8" opacity="0" />
  <circle id="mol6:Atom:3" class="event" cx="0" cy="0" r="8" opacity="0" />
  <circle id="mol6:Atom:4" class="event" cx="0" cy="0" r="8" opacity="0" />
  <circle id="mol6:Atom:5" class="event" cx="0" cy="0" r="8" opacity="0" />
</svg>"
`;

exports[`toSVG > should support noCarbonLabelWithCustomLabel option 1`] = `
"<svg id="myId" xmlns="http://www.w3.org/2000/svg" version="1.1" width="300px" height="300px" viewBox="0 0 300 300">
  <style> #myId text {font-family: sans-serif;} #myId { pointer-events:none; } #myId .event  { pointer-events:all; } #myId line { stroke-linecap:round; } #myId polygon { stroke-linejoin:round; } </style>
  <text x="165.34" y="160.67" stroke="none" font-size="14" fill="rgb(255,13,13)">O</text>
  <text x="176.23" y="160.67" stroke="none" font-size="14" fill="rgb(255,13,13)">H</text>
  <text x="132.27" y="142.67" stroke="none" font-size="11" fill="rgb(0,0,0)">test</text>
  <text x="123.77" y="160.67" stroke="none" font-size="14" fill="rgb(255,13,13)">O</text>
  <text x="113.66" y="160.67" stroke="none" font-size="14" fill="rgb(255,13,13)">H</text>
  <line x1="164.34" y1="152.28" x2="150" y2="144" stroke="rgb(0,0,0)" stroke-width="1.44" />
  <line x1="150" y1="144" x2="135.66" y2="152.28" stroke="rgb(0,0,0)" stroke-width="1.44" />
  <line id="myId:Bond:0" class="event" x1="170.78" y1="156" x2="150" y2="144" stroke-width="8" opacity="0" />
  <line id="myId:Bond:1" class="event" x1="150" y1="144" x2="129.22" y2="156" stroke-width="8" opacity="0" />
  <circle id="myId:Atom:0" class="event" cx="170.78" cy="156" r="8" opacity="0" />
  <circle id="myId:Atom:1" class="event" cx="150" cy="144" r="8" opacity="0" />
  <circle id="myId:Atom:2" class="event" cx="129.22" cy="156" r="8" opacity="0" />
</svg>"
`;
